Fix populate reminder not showing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -473,6 +473,7 @@ p {
   
     .catalog .genres {
       grid-gap: 35px 35px;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
   
   }
